--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
         </section>
     </div>
     
-    <script src="js/jquery-1.11.3.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/script.js"></script>
+    <script src="jquery-1.11.3.min.js"></script>
+    <script src="bootstrap.min.js"></script>
+    <script src="script.js.textClipping"></script>
 </body>
 </html>
