--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             </div>
         </section>
     </div>
-    
-    
-</body>
+    <script src="bootstrap.js"></script>
+    <script src="bootstrap.min.js"></script> 
+    <script src="jquery.3.1.1.min.js"></script></body>
 </html>
