--- a/index.html
+++ b/index.html
@@ -58,5 +58,6 @@
     </div>
     <script src="bootstrap.js"></script>
     <script src="bootstrap.min.js"></script> 
-    <script src="jquery.3.1.1.min.js"></script></body>
+    <script src="jquery.3.1.1.min.js"></script>
+    </body>
 </html>
